# dej

./: .env.prod.example  .envexample  .gitignore  CHANGES_MENU_ITEMS.md  CLAUDE.md  DESIGN_GALLERY.md  FRONTEND_SUMMARY.txt  QUICKSTART.md  README.md  blacklist.json  docker-compose.prod.yml  docker-compose.yml  test_blacklist.py  test_whitelist.py  whitelist.json
backend/: .dockerignore  DockerFile  DockerFile.prod  Dockerfile  Dockerfile.prod  HELLOASSO_TODO.md  pyproject.toml  requirements.txt  test_fix.py
backend/migration/: env.py
backend/migration/versions/: 001_change_menu_fields_to_foreign_keys.py  002_add_menu_limits_and_threshold.py  003_add_last_ip_column.py  004_remove_stock_fields.py  005_change_menu_ids_to_string.py  006_add_email_delivery_status.py  007_change_bonus_ids_to_jsonb.py  008_add_checkout_reuse_fields.py  467833cc429e_add_external_id_to_menu_items.py
backend/src/: mail.py  main.py
backend/src/admin/: router.py  schemas.py
backend/src/auth/: router.py  schemas.py  service.py
backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/core/: config.py  exceptions.py  payment.py  rate_limit.py  security.py
backend/src/db/: base.py  fix_schema.py  init_db.py  init_menu.py  menu_data.json  seed_fake_orders.py  session.py
backend/src/menu/: models.py  router.py  schemas.py  utils.py
backend/src/payments/: background_tasks.py  helloasso_service.py  router.py  schemas.py
backend/src/print/: markdown.py  router.py  (+1 more)
backend/tests/: seed_fake_orders.py  test_helloasso_flow.py  verify_emails.py
(+114 files in other folders)
