[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9.0,<4.0.0",
    "alembic>=1.13.0,<2.0.0",
    "fastapi-mail>=1.4.0,<2.0.0",
    "fastapi[standard]>=0.115.0,<0.120.0",
    "httpx>=0.27.0,<0.28.0",
    "jinja2>=3.1.0,<4.0.0",
    "markdown2>=2.5.4",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "python-dateutil>=2.8.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "python-multipart>=0.0.9,<0.1.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "uvicorn[standard]>=0.30.0,<0.31.0",
    "weasyprint>=67.0",
]
